--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     }
 
     footer {
-      background-color: #333;
+      background-color: transparent; /* 修改为透明 */
       color: white;
       text-align: center;
       padding: 1em;
