--- a/index.html
+++ b/index.html
@@ -72,19 +72,10 @@
       font-weight: bold;
     }
 
-    /* Image styling */
-    .photo {
-      width: 150px;
-      height: 150px;
+    .profile-img {
+      max-width: 200px;
       border-radius: 50%;
-      display: block;
-      margin: 0 auto;
-    }
-
-    .birthdate {
-      text-align: center;
-      font-size: 0.9em;
-      color: #666;
+      margin-bottom: 10px;
     }
   </style>
 </head>
@@ -98,9 +89,8 @@
   <div class="container">
     <section>
       <h2>About Me</h2>
-      <!-- Photo and Birthdate -->
-      <img src="assets/9c9d378d1980857cb0158b86f6d53d70.jpg" alt="Jiaxuan He's Photo" class="photo">
-      <p class="birthdate">Born on 2007/07</p>
+      <img class="profile-img" src="assets/9c9d378d1980857cb0158b86fd53d70.jpg" alt="Jiaxuan He">
+      <p>Born on 2007/07</p>
     </section>
 
     <section>
@@ -117,27 +107,29 @@
         <li>
           <strong>PanoFND:</strong> A Panoptic Benchmark and Explainable Reasoning Framework for Multimodal Fake News Detection<br>
           <em>AAAI 2026 Submission</em><br>
-          <a href="assets/Multimodal_benchmark,_traditional_Chinese_medicine,_Large_Language_Model,_Model_evaluation,_Dataset_construction.pdf" target="_blank">[PDF]</a>
+          <a href="assets/Multimodal benchmark, traditional Chinese medicine, Large Language Model, Model evaluation, Dataset construction, Domain-specific question answering.pdf" target="_blank">[PDF]</a>
         </li>
         <li>
           <strong>PanoAH:</strong> A Panoptic and Hierarchical Benchmark for Audio Hallucination Evaluation for MLLMs<br>
           <em>AAAI 2026 Submission</em><br>
-          <a href="assets/Supplementary_Material.pdf" target="_blank">[PDF]</a>
+          <a href="assets/Multimodal benchmark, traditional Chinese medicine, Large Language Model, Model evaluation, Dataset construction, Domain-specific question answering.pdf" target="_blank">[PDF]</a>
         </li>
         <li>
           <strong>TCM-Ladder:</strong> A Benchmark for Multimodal Question Answering on Traditional Chinese Medicine<br>
           <em>NeurIPS 2025 Submission</em><br>
-          <a href="assets/TruCrisisAware_Integrating_Naturalistic_Decision_Making_into_AI_for_Enhanced_Disaster_Response.pdf" target="_blank">[PDF]</a>
+          <a href="assets/TruCrisisAware_Integrating Naturalistic Decision Making into AI for Enhanced Disaster Response.pdf" target="_blank">[PDF]</a><br>
+          <a href="https://github.com/orangeshushu/TCM-Ladder" target="_blank">[GitHub]</a><br>
+          <a href="https://huggingface.co/datasets/timzzyus/TCM-Ladder" target="_blank">[HuggingFace]</a>
         </li>
         <li>
           <strong>TruCrisisAware:</strong> Integrating Naturalistic Decision Making into AI for Enhanced Disaster Response<br>
           <em>ACC 2025 (Accepted)</em><br>
-          <a href="assets/TruCrisisAware_Integrating_Naturalistic_Decision_Making_into_AI_for_Enhanced_Disaster_Response.pdf" target="_blank">[PDF]</a>
+          <a href="assets/TruCrisisAware_Integrating Naturalistic Decision Making into AI for Enhanced Disaster Response.pdf" target="_blank">[PDF]</a>
         </li>
         <li>
           <strong>TruRescue:</strong> A Federated Learning Based Drone Driven Road Emergency Assistant with Generative AI<br>
           <em>ESCS 2025 (Accepted)</em><br>
-          <a href="assets/TruRescue_A_Federated_Learning_Based_Drone_Driven_Road_Emergency_Assistant_with_Generative_AI.pdf" target="_blank">[PDF]</a>
+          <a href="assets/TruRescue_ A Federated Learning Based Drone Driven Road Emergency Assistant with Generative AI (5).pdf" target="_blank">[PDF]</a>
         </li>
       </ul>
     </section>
