--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     header {
       background-color: #4CAF50;
-      color: white;
+      color: black; /* changed to black */
       text-align: center;
       padding: 1em;
     }
@@ -74,7 +74,8 @@
 
     .profile-img {
       max-width: 200px;
-      border-radius: 50%;
+      height: 200px; /* changed to make it square */
+      border-radius: 0; /* changed to square */
       margin-bottom: 10px;
     }
   </style>
@@ -155,7 +156,7 @@
     <section>
       <h2>Research Experience</h2>
       <ul>
-        <li>TA for 3 Semesters, Tutor for 1 Semester, RA for 3 Semesters</li>
+        <li>3 Semesters as a Teaching Assistant (TA), 3 Semesters as a Research Assistant (RA)</li>
         <li>NeurIPS 2025 First Author Paper</li>
         <li>AAAI Two Co-authored Papers</li>
       </ul>
