--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
       <div class="about-me">
         <img class="profile-img" src="assets/9c9d378d1980857cb0158b86fd53d70.jpg" alt="Jiaxuan He">
         <p>Born on 2007/07</p>
+        <p>Undergraduate Student | Computer Science & Mathematics Double Major | Truman State University | USA</p>
+        <p>GPA: 4.0 (Major GPA) | 3.85 (Cumulative GPA)<br>2024 – 2027</p>
       </div>
     </section>
 
@@ -130,11 +132,11 @@
         </li>
         <li>
           <strong>PanoFND:</strong> A Panoptic Benchmark and Explainable Reasoning Framework for Multimodal Fake News Detection<br>
-          <em>AAAI 2026 Submission</em>
+          <em>AAAI 2026 Submission</em><br>
         </li>
         <li>
           <strong>PanoAH:</strong> A Panoptic and Hierarchical Benchmark for Audio Hallucination Evaluation for MLLMs<br>
-          <em>AAAI 2026 Submission</em>
+          <em>AAAI 2026 Submission</em><br>
         </li>
         <li>
           <strong>TruCrisisAware:</strong> Integrating Naturalistic Decision Making into AI for Enhanced Disaster Response<br>
