--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 
     header p {
       font-size: 1.2em;
-      font-weight: bold;
       margin-top: 0.5em;
       font-style: italic;
     }
@@ -68,7 +67,7 @@
     }
 
     .highlight {
-      color: black; /* Changed to black */
+      color: black;
       font-weight: bold;
     }
 
@@ -101,11 +100,11 @@
     }
 
     .school-name {
-      font-weight: normal; /* School name is not bold */
+      font-weight: normal;
     }
 
     .double-major {
-      font-weight: bold; /* Double major line is bold */
+      font-weight: bold;
     }
 
     .name {
