--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <div class="about-me">
         <img class="profile-img" src="assets/9c9d378d1980857cb0158b86fd53d70.jpg" alt="Jiaxuan He">
         <div>
-          <p class="name">Jiaxuan He (何佳璇)</p>
+          <p class="name">Jiaxuan He 何佳璇</p>
           <p>Born on 2007/07</p>
           <p class="double-major">Undergraduate Student | Computer Science & Mathematics Double Major</p>
           <p class="school-name">Truman State University | USA</p>
