--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <li>Teaching Assistant (TA), Research Assistant (RA), and Tutor experience</li>
         <li>CSCE 2025 First Author Paper: Drone-based System</li>
         <li>CSCE 2025 Second Author Paper: Crisis Management System (Professor First Author)</li>
-        <li>NeurIPS 2025 First Author Paper: Disaster Response AI System</li>
+        <li>NeurIPS 2025 Lead Creator of Paper: Disaster Response AI System</li>
         <li>AAAI 2026 Two Co-authored Papers: Audio and Fake News Detection</li>
       </ul>
     </section>
